--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Temporary portfolio</title>
+  </head>
+  <body>
+    <div class="grid-container">
+      <ul>
+        <li>
+          <a
+            href="https://alaayman.github.io/order-summary-component/"
+            target="_blank"
+            >order-summary-component</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://alaayman.github.io/huddle-landing-page/"
+            target="_blank"
+            >huddle-landing-page</a
+          >
+        </li>
+      </ul>
+    </div>
+  </body>
+</html>
