--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             >huddle-landing-page</a
           >
         </li>
+        <li>
+          <a
+            href="https://alaayman.github.io/testimonials-grid-section/"
+            target="_blank"
+            >testimonials-grid-section</a
+          >
+        </li>
       </ul>
     </div>
   </body>
